Prevent double sets of scrollbars

--- a/less/bureau-mixins.less
+++ b/less/bureau-mixins.less
@@ -116,6 +116,7 @@
 }
 
 .scroller() {
-	overflow: scroll;
+	overflow-y: scroll;
+	overflow-x: hidden;
 	-webkit-overflow-scrolling: touch;
 }
