--- a/less/components/Bounty/BountyCreate.less
+++ b/less/components/Bounty/BountyCreate.less
@@ -11,7 +11,6 @@
 .toolbar-content-overlay {
 	.bounty-create {
 		width: 100%;
-		height: 100%;
-		.scroller();
+		min-height: 100%;
 	}
 }
